{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 396,
  "lineage": "b19ea14f-2ff8-915e-e873-7e747028cc17",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "api-gateway-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-000754e861768ebd9",
            "domain": "vpc",
            "id": "eipalloc-0aaf1e63a5a9da511",
            "instance": "i-05a50d04333099c16",
            "network_interface": "eni-0479d9a3be558a48f",
            "private_dns": "ip-10-0-0-115.ec2.internal",
            "private_ip": "10.0.0.115",
            "public_dns": "ec2-3-225-138-20.compute-1.amazonaws.com",
            "public_ip": "3.225.138.20",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_key_pair.demo-key",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-http",
            "aws_security_group.allow-ssh",
            "aws_subnet.microservices-demo-public-subnet",
            "aws_vpc.microservices-demo",
            "module.api-gateway.aws_instance.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "listing-service-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05973307e3788fcf3",
            "domain": "vpc",
            "id": "eipalloc-029044ec30610d570",
            "instance": "i-0ad9e5cd2315d31e6",
            "network_interface": "eni-0268c3c696e7dccb8",
            "private_dns": "ip-10-0-1-5.ec2.internal",
            "private_ip": "10.0.1.5",
            "public_dns": "ec2-18-207-80-254.compute-1.amazonaws.com",
            "public_ip": "18.207.80.254",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_key_pair.demo-key",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-internal-http",
            "aws_security_group.allow-ssh",
            "aws_subnet.microservices-demo-private-1-subnet",
            "aws_vpc.microservices-demo",
            "module.listing-service.aws_instance.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "users-service-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-09b046989cadd3fc8",
            "domain": "vpc",
            "id": "eipalloc-0531399d205c3996f",
            "instance": "i-025af3254c5ddde4d",
            "network_interface": "eni-039881190668ea541",
            "private_dns": "ip-10-0-1-6.ec2.internal",
            "private_ip": "10.0.1.6",
            "public_dns": "ec2-52-201-6-251.compute-1.amazonaws.com",
            "public_ip": "52.201.6.251",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_key_pair.demo-key",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-internal-http",
            "aws_security_group.allow-ssh",
            "aws_subnet.microservices-demo-private-1-subnet",
            "aws_vpc.microservices-demo",
            "module.users-service.aws_instance.default"
          ]
        }
      ]
    },
    {
      "module": "module.users-service",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc61db8544a617ed",
            "arn": "arn:aws:ec2:us-east-1:012131829540:instance/i-025af3254c5ddde4d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-025af3254c5ddde4d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-039881190668ea541",
            "private_dns": "ip-10-0-1-6.ec2.internal",
            "private_ip": "10.0.1.6",
            "public_dns": "ec2-52-201-6-251.compute-1.amazonaws.com",
            "public_ip": "52.201.6.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d07b8ede5893dafd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a1ce11497fe4b81",
            "tags": {
              "name": "users-service"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00df63130f74e637a",
              "sg-09afeebc13c0947dd",
              "sg-0b9d364a3552926f1"
            ]
          },
          "dependencies": [
            "aws_key_pair.demo-key",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-internal-http",
            "aws_security_group.allow-ssh",
            "aws_subnet.microservices-demo-private-1-subnet",
            "aws_vpc.microservices-demo"
          ]
        }
      ]
    },
    {
      "module": "module.api-gateway",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc61db8544a617ed",
            "arn": "arn:aws:ec2:us-east-1:012131829540:instance/i-05a50d04333099c16",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-05a50d04333099c16",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0479d9a3be558a48f",
            "private_dns": "ip-10-0-0-115.ec2.internal",
            "private_ip": "10.0.0.115",
            "public_dns": "ec2-3-225-138-20.compute-1.amazonaws.com",
            "public_ip": "3.225.138.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03a392999c6d30eeb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eff2cc7492dd60a8",
            "tags": {
              "name": "api-gateway"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00df63130f74e637a",
              "sg-09afeebc13c0947dd",
              "sg-0ad4ebc93b9f40638"
            ]
          },
          "dependencies": [
            "aws_key_pair.demo-key",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-http",
            "aws_security_group.allow-ssh",
            "aws_subnet.microservices-demo-public-subnet",
            "aws_vpc.microservices-demo"
          ]
        }
      ]
    },
    {
      "module": "module.listing-service",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc61db8544a617ed",
            "arn": "arn:aws:ec2:us-east-1:012131829540:instance/i-0ad9e5cd2315d31e6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0ad9e5cd2315d31e6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0268c3c696e7dccb8",
            "private_dns": "ip-10-0-1-5.ec2.internal",
            "private_ip": "10.0.1.5",
            "public_dns": "ec2-18-207-80-254.compute-1.amazonaws.com",
            "public_ip": "18.207.80.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0544d40c0bae0df0d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a1ce11497fe4b81",
            "tags": {
              "name": "listing-service"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00df63130f74e637a",
              "sg-09afeebc13c0947dd",
              "sg-0b9d364a3552926f1"
            ]
          },
          "dependencies": [
            "aws_key_pair.demo-key",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-internal-http",
            "aws_security_group.allow-ssh",
            "aws_subnet.microservices-demo-private-1-subnet",
            "aws_vpc.microservices-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "microservices-demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0680083ca3f349618",
            "owner_id": "012131829540",
            "vpc_id": "vpc-0403d25bea4cd7bac"
          },
          "dependencies": [
            "aws_vpc.microservices-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ac5379342dac153f",
            "owner_id": "012131829540",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0680083ca3f349618",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "vpc_id": "vpc-0403d25bea4cd7bac"
          },
          "dependencies": [
            "aws_internet_gateway.microservices-demo",
            "aws_vpc.microservices-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "microservices-demo-public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025c557d6a26d2b9f",
            "route_table_id": "rtb-0ac5379342dac153f",
            "subnet_id": "subnet-0eff2cc7492dd60a8"
          },
          "dependencies": [
            "aws_internet_gateway.microservices-demo",
            "aws_route_table.public",
            "aws_subnet.microservices-demo-public-subnet",
            "aws_vpc.microservices-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-all-outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:012131829540:security-group/sg-00df63130f74e637a",
            "description": "Allow all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00df63130f74e637a",
            "ingress": [],
            "name": "allow-all-outbound",
            "name_prefix": null,
            "owner_id": "012131829540",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0403d25bea4cd7bac"
          },
          "dependencies": [
            "aws_vpc.microservices-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:012131829540:security-group/sg-0ad4ebc93b9f40638",
            "description": "Allow HTTP inbound traffic",
            "egress": [],
            "id": "sg-0ad4ebc93b9f40638",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-http-traffic",
            "name_prefix": null,
            "owner_id": "012131829540",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0403d25bea4cd7bac"
          },
          "dependencies": [
            "aws_vpc.microservices-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-internal-http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:012131829540:security-group/sg-0b9d364a3552926f1",
            "description": "Allow internal HTTP requests",
            "egress": [],
            "id": "sg-0b9d364a3552926f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-internal-http",
            "name_prefix": null,
            "owner_id": "012131829540",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0403d25bea4cd7bac"
          },
          "dependencies": [
            "aws_vpc.microservices-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-internal-mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:012131829540:security-group/sg-04272f3a649981ed6",
            "description": "Allow internal MySQL request",
            "egress": [],
            "id": "sg-04272f3a649981ed6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow-internal-mysql",
            "name_prefix": null,
            "owner_id": "012131829540",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0403d25bea4cd7bac"
          },
          "dependencies": [
            "aws_vpc.microservices-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:012131829540:security-group/sg-09afeebc13c0947dd",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-09afeebc13c0947dd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "012131829540",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0403d25bea4cd7bac"
          },
          "dependencies": [
            "aws_vpc.microservices-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "microservices-demo-private-1-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:012131829540:subnet/subnet-06a1ce11497fe4b81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06a1ce11497fe4b81",
            "map_public_ip_on_launch": false,
            "owner_id": "012131829540",
            "tags": {
              "Name": "Microservices Demo private 1 Subnet"
            },
            "vpc_id": "vpc-0403d25bea4cd7bac"
          },
          "dependencies": [
            "aws_vpc.microservices-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "microservices-demo-private-2-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:012131829540:subnet/subnet-0934c1f9aff00fefa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0934c1f9aff00fefa",
            "map_public_ip_on_launch": false,
            "owner_id": "012131829540",
            "tags": {
              "Name": "Microservices Demo private 2 Subnet"
            },
            "vpc_id": "vpc-0403d25bea4cd7bac"
          },
          "dependencies": [
            "aws_vpc.microservices-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "microservices-demo-public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:012131829540:subnet/subnet-0eff2cc7492dd60a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0eff2cc7492dd60a8",
            "map_public_ip_on_launch": false,
            "owner_id": "012131829540",
            "tags": {
              "Name": "Microservices Demo Public Subnet"
            },
            "vpc_id": "vpc-0403d25bea4cd7bac"
          },
          "dependencies": [
            "aws_vpc.microservices-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "microservices-demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:012131829540:vpc/vpc-0403d25bea4cd7bac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d2a154003ed2cae6",
            "default_route_table_id": "rtb-08bc3436bc0754e74",
            "default_security_group_id": "sg-0c09f6500c81954d6",
            "dhcp_options_id": "dopt-8e295af5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0403d25bea4cd7bac",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08bc3436bc0754e74",
            "owner_id": "012131829540",
            "tags": {
              "Name": "Microservices Demo VPC"
            }
          }
        }
      ]
    }
  ]
}